# giskard

./: .coveragerc  .dockerignore  .env  .env.dev  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  Layerfile  Makefile  README.dev.md  README.md  SECURITY.md  build.gradle  build.gradle.kts  buildspec.yml  conftest.py  docker-compose.ami.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  giskard.dockerfile  gradle.properties  gulpfile.js  j2ts-config.json  libomp.rb  memory_fixtures.csv  memory_tests.csv  package-lock.json  package.json  pyproject.toml  (+5 more)
backend/app/: app.dockerfile  pyproject.toml
backend/app/app/: backend_pre_start.py  main.py
backend/app/scripts/: email-templates.sh
giskard-ml-worker/: .gitignore  build.gradle  cli.py  logging_config.ini  logging_config.prod.ini  main.py  ml-worker.dockerfile  mltask_server_runner.py  mypy.ini  pyproject.toml  settings.py  sonar-project.properties
giskard-ml-worker/GiskardCustomModel/: giskard_model.pickle  giskard_test.ipynb  pyproject.toml
giskard-ml-worker/docs/: conf.py  modules.rst
giskard-ml-worker/giskard/: __init__.py  cli.py  cli_utils.py  logging_config.ini  settings.py
giskard-ml-worker/giskard/ml_worker/: ml_worker.py
giskard-ml-worker/giskardcustommodel/: giskard_model.pickle  giskard_test_data.csv  pyproject.toml
giskard-ml-worker/ml_worker/: core
giskard-ml-worker/ml_worker/bridge/: ml_worker_bridge.py
giskard-ml-worker/ml_worker/core/: giskard_dataset.py  ml.py  model.py  model_explanation.py
giskard-ml-worker/ml_worker/server/: ml_task_server.py  ml_worker_service.py
giskard-ml-worker/ml_worker/testing/: abstract_test_collection.py  drift_tests.py  functions.py  heuristic_tests.py  metamorphic_tests.py  performance_tests.py  statistical_tests.py  utils.py
giskard-ml-worker/ml_worker/tunnel/: ml_worker_bridge.py  original_bridge.py  service_messages.py
giskard-ml-worker/ml_worker/utils/: error_interceptor.py  grpc_mapper.py  logging.py  network.py
giskard-ml-worker/test/: __init__.py  test_citibeats.py  test_data_drift.py  test_heuristic.py  test_logging.py  test_metamorphic_direction.py  test_metamorphic_invariance.py  test_model.py  test_model_explanation.py  test_performance.py  test_utils.py
giskard-ml-worker/test/fixtures/: enron_multilabel_classification.py  german_credit_scoring.py  modeling.py  regression.py
new-version/libs/core/: README.md  pyproject.toml
python-client/: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  giskard-2.0.0b14-py3-none-any.whl  gulpfile.js  mkdocs.yml  noxfile.py  package-lock.json  package.json  postcss.config.js  proto  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tailwind.config.js  test.ipynb  text_weights.ipynb  titanic.ipynb  trigger.txt
python-client/.github/workflows/: build-image.yml  install-test.yml  publish.yml
python-client/docker/: Dockerfile
python-client/docs/: README.md  SUMMARY.md  conf.py  index-rst.rst  index.md  index.rst  push-feature.md  subpage.md  test.ipynb  test.md  test_catalog.md
python-client/docs/_templates/: base.html  page.html
python-client/docs/assets/: scan_widget.html
python-client/docs/catalogs/: index.md  index.rst
python-client/docs/cli/: index.rst
python-client/docs/contribute/: configuration.md  dev-environment.md  giskard-architecture.md  index.md  index.rst
python-client/docs/datasets/: index.rst
python-client/docs/getting-started/: index.md  index.rst  quickstart.ipynb  quickstart.md
python-client/docs/guides/: configuration.md  contribute-to-giskard.md  create-custom-test-suite.md  index.md  index.rst  review-your-model.md
python-client/docs/integrations/: index.md
python-client/docs/models/: index.rst
python-client/docs/reference/: index.rst
python-client/docs/source/: conf.py  index.rst
python-client/docs/tests/: index.rst
python-client/docs/tutorials/: index.md
python-client/giskard/: __init__.py  cli.py  cli_utils.py  path_utils.py  settings.py
python-client/giskard/client/: analytics_collector.py  dtos.py  giskard_client.py  io_utils.py  model.py  project.py  python_utils.py
python-client/giskard/commands/: cli_server.py  cli_worker.py
python-client/giskard/core/: core.py  dataset_caching.py  dataset_validation.py  errors.py  model.py  model_validation.py  scan.py  suite.py  validation.py
python-client/giskard/data/: __init__.py  dataset.py
python-client/giskard/datasets/: __init__.py
python-client/giskard/demo/: __init__.py  linear_regression.py  titanic_classification.py
python-client/giskard/llm/: config.py  talk.py
python-client/giskard/ml_worker/: ml_worker.py
python-client/giskard/model/: __init__.py  utils.py
python-client/giskard/models/: __init__.py  _precooked.py  automodel.py  catboost.py  function.py  huggingface.py  langchain.py  model_explanation.py  precooked.py  pyfunc.py  pytorch.py  shap_result.py  sklearn.py  tensorflow.py  utils.py
python-client/giskard/push/: __init__.py  contribution.py  perturbation.py  prediction.py  transformation.py  utils.py
python-client/giskard/scanner/: __init__.py  common.py  (+11 more)
python-client/scripts/: fix_grpc_generated_imports.py  install-giskard-client-dev.sh  make-release.sh
python-client/tests/: __init__.py  conftest.py  google_drive_utils.py  test_automodel.py  test_autoserializablemodel.py  test_classification_labels.py  test_custom_model.py  test_data_drift.py  test_data_leakage_and_stochasticity.py  test_data_processing_pipeline.py  test_dataset.py  test_logging.py  test_metamorphic_direction.py  test_metamorphic_invariance.py  test_model.py  test_model_auto_inference.py  test_model_explanation.py  test_model_postprocess.py  test_performance.py  test_prediction.py  test_programmatic.py  test_project_uploads.py  test_push.py  test_robustness_scan.py  test_settings.py  test_statistical.py  test_suite.py  test_upload.py  test_utils.py  utils.py
(+3506 files in other folders)
