[tool.poetry]
name = "giskard"
version = "0.1.0"
description = ""
authors = ["Andrey Avtomonov <andrey@giskard.ai>"]
include = ["giskard/ml_worker/generated/*"]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
alibi = { extras = ["shap"], version = "^0.7.0" }
beautifulsoup4 = "^4.11.1"
cloudpickle = "^2.1.0"
eli5 = "^0.13.0"
great-expectations = "^0.15.17"
grpcio = "^1.46.3"
grpcio-status = "^1.46.3"
pandas = "^1.3.5"
protobuf = "^3.9.2"
pydantic = "^1.9.2"
scikit-learn = "^1.0.2"
shap = "^0.40.0"
zstandard = "^0.15.2"
numpy = "^1.21.6"
tenacity = "^8.1.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^65.4.1"
grpcio-tools = "^1.46.3"
mypy-protobuf = "^3.2.0"
pytest-cov = "^3.0.0"


[tool.poetry.group.test.dependencies]
catboost = "^1.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core^1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
giskard = "giskard.cli:cli"


[virtualenvs]
create = true
in-project = true
