[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["giskard*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
giskard = ["**/*.html", "**/*.css", "**/*.js", "**/*.json", "**/*titanic.csv","**/*prompts.csv","**/*.txt"]




[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "torch"



[tool.pdm.scripts]
# add "-n auto" to the pytest command to parallelize the execution
test.cmd = "pytest -c pyproject.toml tests --cov=giskard --cov-report=xml --disable-warnings --no-header -vv --durations=0"
test.env = { GSK_DISABLE_ANALYTICS = "True" }
# for some reason github runners don't work when calling 'pdm test -m "not slow"'
test-fast.cmd = "pytest -n auto -m 'not slow' -c pyproject.toml tests --cov=giskard --cov-report=xml --disable-warnings --no-header -vv --durations=0"
test-fast.env = { GSK_DISABLE_ANALYTICS = "True" }
lint = "ruff giskard tests"
doc = "python -m sphinx_autobuild --watch giskard docs docs/_build/html"

[tool.pdm.dev-dependencies]
dev = [
    "typing-extensions>=4.5.0",
    "bandit>=1.7.4",
    "darglint>=1.8.1",
    "jupyter>=1.0.0",
    "jupyterlab>=3.4.2",
    "pre-commit>=2.19.0",
    "pydocstyle>=6.1.1",
    "pylint>=2.13.9",
    "pyupgrade>=2.32.1",
    "safety>=1.10.3",
    "mypy>=0.982",
    "deptry>=0.5.13",
    "httpretty>=1.1.4",
    "isort[colors]>=5.12.0",
    "pip>=23.1.2",
    "langchain>=0.0.187",
    "nltk>=3.8.1",
    "xgboost>=1.7.5",
    "lightgbm>=3.3.5",
    "imbalanced-learn>=0.10.1",
    "pytest-xdist>=3.3.1",
    "ruff>=0.0.271",
    "mlflow>2",
    "black[d]>=22.12.0",
]
test = [
    "pytest-cov>=4.0.0",
    "pytest>=7.1.2",
    "catboost>=1.1.1",
    "requests-mock>=1.10.0",
    "tensorflow-hub>=0.12.0",
    "transformers>=4.27.4, <4.30",
    "torch>=2.0.0",
    "torchdata>=0.6.0",
    "torchtext>=0.15.1",
    "portalocker>=2.0.0",
    "scikit-learn==1.0.2",
    "tensorflow-macos>=2.10.0, <2.11; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorflow>=2.10.0, <2.11; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "tensorflow-text>=2.10.0, <2.11; platform_machine == 'x86_64' or platform_machine == 'amd64'",
    "mlflow>2",
    "wandb"
]
doc = [
    "furo>=2023.5.20",
    "myst-parser>=1.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx>=6.1.3",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-autoapi>=2.1.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-tabs>=3.4.1",
    "sphinx-design>=0.4.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-click>=4.4.0",
    "nbsphinx>=0.9.2",
    "ipython==8.12.0"
]

[project.scripts]
giskard = "giskard.cli:cli"

[project.entry-points."mlflow.model_evaluator"]
giskard = "giskard.integrations.mlflow.giskard_evaluator:GiskardEvaluator"

[project.urls]
"Homepage" = "https://giskard.ai"
"Source Code" = "https://github.com/Giskard-AI/giskard"
"Bug Tracker" = "https://github.com/Giskard-AI/giskard/issues"
"Documentation" = "https://docs.giskard.ai/"
"Discord" = "https://discord.gg/ABvfpbu69R"
"Linkedin" = "https://www.linkedin.com/company/giskard-ai"
"Mastodon" = "https://fosstodon.org/@Giskard"
"Twitter" = "https://twitter.com/giskard_ai"


[project]
name = "giskard"
readme = "README.md"
license = { text = "Apache Software License 2.0" }
version = "2.0.0b17"
description = "The testing framework dedicated to ML models, from tabular to LLMs"
authors = [
    { name = "Giskard AI", email = "hello@giskard.ai" },
]
keywords = [
    "Artificial Intelligence",
    "Machine Learning",
    "Quality",
    "MLOps"
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

requires-python = ">=3.8.1, <3.12"
dependencies = [
    "cloudpickle>=1.1.1",
    "zstandard>=0.10.0 ",
    "mlflow-skinny>=2",
    "numpy>=1.22.0,<1.24.0", # shap doesn't work with numpy>1.24.0: module 'numpy' has no attribute 'int'
    "scikit-learn>=1.0",
    "scipy>=1.7.3",
    "mixpanel>=4.4.0",
    "requests>=2.19",
    "pydantic>=1.7, <2",
    "tqdm>=4.42.0",
    "setuptools>=39.1.0,<68.0.0",
    "pandas>=1.3.4,<2",
    "xxhash>=3.2.0",
    "langdetect>=1.0.9",
    "chardet", # text metadata
    "jinja2>=3", # scan template
    "markdown",
    "requests-toolbelt>=0.9.1",
    "stomp-py>=8.1.0",
]

[project.optional-dependencies]
llm = [
    "transformers",
    "torch",
    "langchain",
    "evaluate",
    "detoxify>=0.5.0",
    # pdm lock -G:all doesn't work without fixing these two versions
    "datasets>=2.13.0",
    "bert-score>=0.3.13",
]
server = [
    "tenacity>=4.11.0",
    "psutil>=5.4.6",
    "click>=7.0",
    "docker>=6.0.0",
    "shap>=0.41.0",
    "lockfile>=0.12.2",
    "python-daemon>=2.2.2,<3",
    "pycryptodome>=3.6.1",
    "pyngrok>=6.0.0",
]

[tool.ruff]
line-length = 120
ignore = ["E501"]

[tool.black]
# https://github.com/psf/black
target-version = ['py38', 'py39', 'py310']
line-length = 120
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | giskard/ml_worker/generated
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 100

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
plugins = ["pydantic.mypy"]

allow_redefinition = false
check_untyped_defs = false # TODO: Andrey: fix it gradually
disallow_untyped_defs = false # TODO: Andrey: fix it gradually
disallow_any_generics = false # TODO: Andrey: fix it gradually
disallow_incomplete_defs = false # TODO: Andrey: fix it gradually
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = false # TODO: Andrey: fix it gradually
strict_equality = false # TODO: Andrey: fix it gradually
strict_optional = false # TODO: Andrey: fix it gradually
warn_no_return = false
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
testpaths = ["tests"]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["ELLIPSIS", "NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Extra options:
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]
