[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8.0"
uvicorn = "^0.15.0"
fastapi = "^0.75.0"
python-multipart = "^0.0.5"
email-validator = "^1.1.2"
requests = "^2.25.1"
celery = "^5.2.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = ">=1.7.1,<1.9.0"
raven = "^6.10.0"
gunicorn = "^20.0.4"
alembic = "^1.7.5"
sqlalchemy = "^1.4.27"
pytest = "^6.2.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
mjml = "^0.6.2"
Django = "^3.2.10"
beautifulsoup4 = "^4.10.0"
Jinja2 = "^3.0.2"
psycopg2-binary = "^2.9.2"
aiofiles = "^0.8.0"
pandas = "^1.3.4"
#xlrd = "^2.0.1"
openpyxl = "^3.0.9"
zstandard = "^0.15.2"
scikit-learn = "^0.24.2"
cloudpickle = "^1.6.0"
typing-extensions = "^3.10.0"
eli5 = "^0.11.0"
shap = "^0.40.0"
#spacy = "^3.2.1"
alibi = {git = "https://github.com/alexcombessie/alibi.git"}
ipywidgets = "^7.6.5"
pyecharts = "^1.9.0"
#torch = "^1.10.1"
#transformers = "^4.15.0"
xgboost = "^1.5.1"
#lightgbm = "^3.3.1"
#Theano = "^1.0.5"
#mxnet = "^1.8.0"
#fastai = "^2.5.3"
websocket = "^0.2.1"
#catboost = "^1.0"
ai-inspector = "^0.1.2"
#dask = "^2022.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"
pydocstyle = "^6.1.1"
safety = "^1.10.3"
bandit = "^1.7.1"
darglint = "^1.8.1"

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = true
