[tool.poetry]
name = "giskardcustommodel"
version = "0.1.0"
description = ""
authors = ["Francesco Ventura <francesco.ventura@sysdig.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = ">=1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
