[tool.poetry]
name = "giskardcustommodel"
version = "0.1.0"
description = ""
authors = ["Francesco Ventura <francesco.ventura@sysdig.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = ">=1.0.2"
ipykernel = "^6.15.1"
pandas = "^1.4.3"
giskard = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
