[project]
name = "giskard-core"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Giskard", email = "help@giskard.ai"},
]
dependencies = []
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
